--- a/code/MMServerEngine/others/sysPara/sysPara.properties
+++ b/code/MMServerEngine/others/sysPara/sysPara.properties
@@ -8,9 +8,24 @@ star2Energy = 3
 star3Energy = 5
 star4Energy = 10
 defaultSpeed = 10
-unlimitedSpeed = 10
+
 ladder = 10;
 #匹配等待时间
 matchWaitTime = 30
 #增长精力间隔时间
 addEnergyInterval = 360
+#无尽版相关参数：要有一个公式，该公司满足一个一个对数函数，越往后越难，但是能过关
+unlimitedSpeed = 10
+unlimitedEnergy = 5
+
+#天梯版的随机因子
+ladderSize = 15-25
+ladderSpeed = 8-15
+ladderTime = 120-400
+ladderStar1 = 40-80
+
+# 开启限制
+# 开启无尽模式
+openUnlimited = 10
+# 开启对战模式
+openPvp = 20
