--- a/code/MMServerEngine/pom.xml
+++ b/code/MMServerEngine/pom.xml
@@ -27,6 +27,11 @@
       <artifactId>javax.servlet-api</artifactId>
       <version>3.1.0</version>
     </dependency>
+    <dependency>
+      <groupId>javax.servlet.jsp</groupId>
+      <artifactId>javax.servlet.jsp-api</artifactId>
+      <version>2.3.1</version>
+    </dependency>
     <!--slf4j-log4j12-->
     <dependency>
       <groupId>org.slf4j</groupId>
