--- a/code/MMServerEngine/pom.xml
+++ b/code/MMServerEngine/pom.xml
@@ -180,6 +180,12 @@
       <version>2.3.0</version>
     </dependency>
 
+    <dependency>
+      <groupId>com.googlecode.concurrentlinkedhashmap</groupId>
+      <artifactId>concurrentlinkedhashmap-lru</artifactId>
+      <version>1.4.2</version>
+    </dependency>
+
   </dependencies>
 
   <build>
