--- a/code/MMServerEngine/src/main/resources/mmserver.properties
+++ b/code/MMServerEngine/src/main/resources/mmserver.properties
@@ -59,3 +59,5 @@ servers=
 # memcached的列表ip:port
 memcachedServers=127.0.0.1:11211
 memcachedWeights=1-1-1
+############################# lru map ################################
+maximumWeightedCapacity=3000000
