--- a/code/MMServerEngine/src/main/resources/mmserver.properties
+++ b/code/MMServerEngine/src/main/resources/mmserver.properties
@@ -41,7 +41,7 @@ mainServer = 127.0.0.1:8001
 ############################# database #################################
 jdbc.type=mysql
 jdbc.driver=com.mysql.jdbc.Driver
-jdbc.url=jdbc:mysql://localhost:3306/test
+jdbc.url=jdbc:mysql://localhost:3306/test?autoReconnect=true
 jdbc.username=root
 #123456
 jdbc.password=admin
